name:                sdl-cairo-demo-cat
version:             0.1.0.4
license:             BSD3
license-file:        LICENSE
author:              misterfish
maintainer:          allen@netherrealm.net
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Graphics.DemoCat.Launch, Graphics.DemoCat.CairoSDL, Graphics.DemoCat.Util, Graphics.DemoCat.Types, Graphics.DemoCat.Render.PathParser, Graphics.DemoCat.Render.Paths, Graphics.DemoCat.Render.Render, Graphics.DemoCat.Render.Types, Graphics.DemoCat.Render.Util
  other-extensions:    OverloadedStrings, NamedFieldPuns, PatternSynonyms
  build-depends:       base >=4.9 && <=4.11.0.0, sdl2 >=2.3 && <2.4, linear >=1.20 && <1.21, cairo >=0.13 && <0.14, text >=1.2 && <1.3, parsec >=3.1 && <3.2, filepath >=1.4 && <1.5, monad-loops >=0.4 && <0.5, random >=1.1 && <2, bytestring, base64-bytestring >= 1.0.0.1, vector >= 0.11.0.0, JuicyPixels >= 3.2.8.3
  hs-source-dirs: src
  default-language:    Haskell2010
